--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -32,7 +32,7 @@
     - 日本国語大辞典
         
         Both 交易 and 貿易 had been used in the middle ages in the meaning of trade with 交易 as a more predominant choice.
-        However, since Meiji era, 貿易 began to be used more.
+        However, during the Meiji era, 貿易 began to be used more.
 
 
 ## Sinetymology's Opinion
