--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -11,7 +11,8 @@
 ### Claims
 1. [Masini, 1993]
 
-        A chinese autochthon with earliest appearance in 《史记》 meaning trade. It should not be considered as a loan from Japanese.
+        A chinese autochthon with earliest appearance in 《史记》 meaning trade.
+        It should not be considered as a loan from Japanese.
 
 2. [Miller, 1967]
 
@@ -19,20 +20,39 @@
 
 ### Evidence in literatures and other materials
 1. Chinese occurences
+    - 史记(BC104 ~ BC91)-货殖列传・范蠡
 
-        史記‐貨殖伝・范蠡「以物相貿易」
+           以物相貿易
+        
+    - 海国图志(1843)-卷二
+    
+           今以道光十七年，广东与英夷贸易出入之数计之
+           有人言情愿断止鸦片一物，别开南边港口贸易可乎？
         
 2. Japanese occurences
-
-        律〔７１８〕賊盗・貿易条「凡以私財物・奴婢・畜産之類、〈略〉貿易官物者、計其等、准盗論」
-        類聚三代格‐一八・天長五年〔８２８〕正月二日・太政官符「蕃客物私交者、法有恒科、而此間之人必愛遠物、争以貿易」
-        正法眼蔵〔１２３１～５３〕袈裟功徳「あるいは浄命よりうるところのものをもて、市にして貿易せらん、またこれ袈裟につくりつべし」
+    - 律(718)賊盗・貿易条
+    
+          凡以私財物・奴婢・畜産之類、〈略〉貿易官物者、計其等、准盗論」
+    - 類聚三代格‐一八・天長五年(828)正月二日・太政官符
+          
+          蕃客物私交者、法有恒科、而此間之人必愛遠物、争以貿易
+          
+    - 正法眼蔵(1231 ~ 1253)袈裟功徳
+          
+          あるいは浄命よりうるところのものをもて、市にして貿易せらん、またこれ袈裟につくりつべし
+          
+    - 航米日録(1860)三
+    
+          日々数種の什器をへ来り、貿易せんと欲す
+    - 一年有半(1901)〈中江兆民〉
+    
+          即ち貿易の順逆、金融の緩漫、工商業の振不振等
         
 3. Japanese etymologies
     - 日本国語大辞典
         
-        Both 交易 and 貿易 had been used in the middle ages in the meaning of trade with 交易 as a more predominant choice.
-        However, during the Meiji era, 貿易 began to be used more.
+           Both 交易 and 貿易 had been used in the middle ages in the meaning of trade 
+           with 交易 as a more predominant choice. However, during the Meiji era, 貿易 began to be used more.
 
 
 ## Sinetymology's Opinion
