--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -32,7 +32,7 @@
 2. Japanese occurences
     - 律(718)賊盗・貿易条
     
-          凡以私財物・奴婢・畜産之類、〈略〉貿易官物者、計其等、准盗論」
+          凡以私財物・奴婢・畜産之類、〈略〉貿易官物者、計其等、准盗論
     - 類聚三代格‐一八・天長五年(828)正月二日・太政官符
           
           蕃客物私交者、法有恒科、而此間之人必愛遠物、争以貿易
