--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -26,7 +26,7 @@
         
     - 海国图志(1843)-卷二
     
-           今以道光十七年，广东与英夷贸易出入之数计之
+           今以道光十七年，广东与英夷贸易出入之数计之，湖丝价银六百五十九万员
            有人言情愿断止鸦片一物，别开南边港口贸易可乎？
         
 2. Japanese occurences
