--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -57,6 +57,6 @@
 
 ## Sinetymology's Opinion
 
-    We want to add on top of the claim of [Masini, 1993] that 贸易 have shifted from a verb
+    We want to add on top of the claim of [Masini, 1993] that 贸易 has shifted from a verb
     to a noun in Mainland Mandarin. The equivalent of the verb usage may be 进行贸易. 
     
