--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -6,6 +6,7 @@
    - [en] trade (Masini, 1993)
    - [zh] 商业活动 (现代汉语词典第五版)
 * structure: determining-determined
+* meaning of components: 贸 means trade (贸，易财也 (说文解字)) and 易 means to exchange
 
 ## Academic hypotheses
 ### Claims
