--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -8,8 +8,8 @@
 * structure: determining-determined
 * meaning of components: 贸 means trade (贸，易财也 (说文解字)) and 易 means to exchange
 
-## Academic hypotheses
-### Claims
+## Hypotheses
+### Academic
 1. [Masini, 1993]
 
         A chinese autochthon with earliest appearance in 《史记》 meaning trade.
@@ -18,7 +18,10 @@
 2. [Miller, 1967]
 
         An original loan from Japanese (貿易·bōeki).
-
+        
+### Sinetymology's opinion
+        We want to add on top of the claim of [Masini, 1993] that 贸易 has shifted from a verb
+        to a noun in Mainland Mandarin. The equivalent of the verb usage may be 进行贸易. 
 ### Evidence in literatures and other materials
 1. Chinese occurences
     - 史记(BC104 ~ BC91)-货殖列传・范蠡
@@ -58,6 +61,5 @@
 
 ## Sinetymology's Opinion
 
-    We want to add on top of the claim of [Masini, 1993] that 贸易 has shifted from a verb
-    to a noun in Mainland Mandarin. The equivalent of the verb usage may be 进行贸易. 
+    
     
