--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -9,7 +9,7 @@
 * meaning of components: 贸 means trade (贸，易财也 (说文解字)) and 易 means to exchange
 
 ## Hypotheses
-### Academic
+### Academic claims
 1. [Masini, 1993]
 
         A chinese autochthon with earliest appearance in 《史记》 meaning trade.
@@ -22,6 +22,7 @@
 ### Sinetymology's opinion
         We want to add on top of the claim of [Masini, 1993] that 贸易 has shifted from a verb
         to a noun in Mainland Mandarin. The equivalent of the verb usage may be 进行贸易. 
+        
 ### Evidence in literatures and other materials
 1. Chinese occurences
     - 史记(BC104 ~ BC91)-货殖列传・范蠡
@@ -57,9 +58,3 @@
         
            Both 交易 and 貿易 had been used in the middle ages in the meaning of trade 
            with 交易 as a more predominant choice. However, during the Meiji era, 貿易 began to be used more.
-
-
-## Sinetymology's Opinion
-
-    
-    
