--- a/markdown_data/贸易.md
+++ b/markdown_data/贸易.md
@@ -28,6 +28,9 @@
     - 史记(BC104 ~ BC91)-货殖列传・范蠡
 
            以物相貿易
+    - 职方外纪(1623)-卷二
+    
+           凡欲贸易，须假托外邦商贾，方取信国人
         
     - 海国图志(1843)-卷二
     
