--- a/markdown_data/保释.md
+++ b/markdown_data/保释.md
@@ -18,10 +18,14 @@
         An original loan from Japanese (保釈·hoshaku).
 
 ### Evidence in literatures and other materials
-1. 日本国語大辞典
+1. Japanese Occurences
 
         仏和法律字彙〔１８８６〕〈藤林忠良・加太邦憲〉「LIBERTÉ PROVISOIRE. Hoshaku 保釈」
         花間鶯〔１８８７～８８〕〈末広鉄腸〉中・三「八蔵も武田を止宿せしめし廉にて拘留になり、全く素生を知らず受人の保證を信じて抱へ置きしと云ふ申訳が立ち、一先づ保釈（ホシャク）となって宿へ下り」
+
+2. Chinese Occurences
+        
+        述异记(1654~1722)东轩主人  天成见盗妇色美，力为保释
 
 
 ## Hypotheses without evidence
